<?xml version="1.0" encoding="utf-8"?><!--
  ~ Designed and developed by Wedemy 2023.
  ~
  ~ Licensed under the MIT.
  ~ Please see full license: https://github.com/Wedemy/eggeum-android/blob/main/LICENSE
  -->

<resources>
  <string name="server_error_message">서버에 문제가 발생했어요. 잠시 후 다시 시도해주세요.</string>
  <string name="network_error_message">네트워크 연결을 확인해주세요.</string>

  <!--  Home-->
  <string name="home">홈</string>
  <string name="new_cafe">신규 카페</string>
  <string name="check_new_cafe">새롭게 추가된 카페를 확인해보세요.</string>
  <string name="cafe">카페</string>
  <string name="study_cafe">스터디 카페</string>
  <string name="study_room">스터디 룸</string>

  <!--  Search-->
  <string name="my_account">내 계정</string>
  <string name="search">검색</string>
  <string name="search_cafe">카페 검색</string>
  <string name="location_permission_educational_message">지도 사용을 위해 위치 권한을 허용해주세요.(필수권한)</string>
  <string name="current_map_search_cafe">현 지도에서 검색</string>
  <string name="check">확인</string>
  <string name="cancel">취소</string>
  <string name="Info">정보</string>
  <string name="image">사진</string>
  <string name="menu">메뉴</string>
  <string name="area">면적</string>
  <string name="meeting_room">회의실</string>
  <string name="multi_seat">다인석</string>
  <string name="single_seat">1인석</string>
  <string name="business_hours">영업시간</string>
  <string name="rest_room">화장실</string>
  <string name="parking">주차</string>
  <string name="smoking_zone">흡연구역</string>
  <string name="wifi">WIFI</string>
  <string name="outlet">콘센트</string>
  <string name="sns">SNS</string>
  <string name="phone">전화</string>
  <string name="phone_charging">휴대폰 충전</string>
  <string name="blog">블로그</string>
  <string name="instagram">인스타그램</string>
  <string name="website">웹사이트</string>
  <string name="dot">•</string>
  <string name="cafe_address">카페 주소 <font color="#14b8a6">*</font></string>
  <string name="share">share</string>
  <string name="cafe_image_report">사진 신고하기</string>
  <string name="image_index"><font color="#ffffff">5</font><font color="#6b7280">/25</font></string>
  <string name="proposal_info_edit">정보 수정 제안</string>
  <string name="no_recent_searches">최근 검색어가 없습니다.</string>
  <string name="no_search_results">검색 결과가 존재하지 않습니다.</string>
  <string name="no_image_found">등록된 사진이 존재하지 않습니다.</string>

  <!--  MyAccount-->
  <string name="edit_my_info">내 정보 수정</string>
  <string name="notice">공지사항</string>
  <string name="customer_support">고객지원</string>
  <string name="privacy_policy">개인정보 처리 방침</string>
  <string name="service_terms">서비스 이용약관</string>
  <string name="version_info">버전 정보</string>
  <string name="setting">설정</string>
  <string name="nickname">닉네임 <font color="#14b8a6">*</font></string>
  <string name="nickname_hint">닉네임</string>
  <string name="email">이메일</string>
  <string name="edit">수정하기</string>
  <string name="temp">최소 2자 이상 입력해주세요.</string>
  <string name="empty_text_error">닉네임을 입력해주세요.</string>
  <string name="too_short_text_error">최소 2자 이상 입력해주세요.</string>
  <string name="default_email">eggeum@gamil.com</string>
  <string name="logout">로그아웃</string>
  <string name="withdraw">회원탈퇴</string>
  <string name="delete_id">ID가 삭제됩니다.</string>
  <string name="delete_privacy_and_setting">개인정보와 설정이 삭제됩니다.</string>
  <string name="delete_linked_social_account_info">연결된 소설 계정 정보가 삭제됩니다.</string>
  <string name="unsubscribe">탈퇴하기</string>
  <string name="delete_activity_history">활동 이력이 삭제됩니다.</string>
  <string name="agree_to_notification">안내 사항을 확인하고 회원탈퇴에 동의합니다.</string>
  <string name="report">문의</string>
  <string name="report_title">제목 <font color="#14b8a6">*</font></string>
  <string name="report_content">문의 내용 <font color="#14b8a6">*</font></string>
  <string name="input_report_content">문의 내용을 입력해주세요.</string>
  <string name="input_report_title">제목을 입력해주세요.</string>
  <string name="search_keyword">검색어를 입력해주세요.</string>
  <string name="ic_report_complete">ic_register_cafe_complete</string>
  <string name="report_complete_title">문의가 접수되었습니다.</string>
  <string name="report_complete_subtitle">이메일로 답변을 알려드려요.</string>
  <string name="send_report">문의 보내기</string>
  <string name="complete">완료</string>

  <!--  EditMyInfo-->
  <string name="already_exist_text_error">이미 있는 닉네임 입니다.</string>
  <string name="contains_whitespace_error">닉네임에 띄어쓰기를 포함할 수 없습니다.</string>
  <string name="contains_invalid_character_error">닉네임은 영문, 숫자, 완성된 한글의 조합만 사용할 수 있습니다.\n한글의 자음이나 모음만의 조합은 허용되지 않습니다.</string>
  <string name="ic_bottom_sheet_handle">ic_bottom_sheet_handle</string>

  <!--  NetworkError-->
  <string name="retry">다시 시도</string>
  <string name="ic_network_error">ic_network_error</string>
  <string name="network_error_title">잠시 연결이 불안해요</string>
  <string name="network_error_subtitle">조금 뒤 다시 접속해주세요.</string>

  <!-- ReportCafeImage-->
  <string name="report_cafe_image_title">이 사진에 어떤 문제가 있나요?</string>
  <string name="wrong_place">잘못된 장소</string>
  <string name="expression_of_hatred_or_outright_violence">증오심 표현 또는 노골적 폭력</string>
  <string name="pornographic_or_sexual_content">포르노 또는 성적인 콘텐츠</string>
  <string name="spam">스팸</string>
  <string name="copyright_or_legal_matter">저작권 또는 법적 문제</string>
  <string name="invalid_address">올바른 주소가 아닙니다</string>
  <string name="withdraw_complete">회원 탈퇴가 완료되었습니다.</string>
  <string name="logout_complete">로그아웃이 완료되었습니다.</string>

</resources>