<?xml version="1.0" encoding="utf-8"?><!--
  ~ Designed and developed by Wedemy 2023.
  ~
  ~ Licensed under the MIT.
  ~ Please see full license: https://github.com/Wedemy/eggeum-android/blob/main/LICENSE
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:ignore="HardcodedText">

  <com.google.android.material.appbar.MaterialToolbar
    android:id="@+id/tb_withdraw"
    android:layout_width="0dp"
    android:layout_height="56dp"
    android:elevation="0dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">

      <ImageView
        android:id="@+id/iv_withdraw_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:contentDescription="X"
        android:src="@drawable/ic_x_filled_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

  </com.google.android.material.appbar.MaterialToolbar>

  <TextView
    android:id="@+id/tv_withdraw_title"
    style="@style/H5"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    android:text="@string/withdraw"
    android:textColor="@color/gray_900"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/tb_withdraw" />

  <TextView
    android:id="@+id/tv_withdraw_delete_id"
    style="@style/TextSRegular"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="32dp"
    android:paddingHorizontal="16dp"
    android:paddingVertical="8dp"
    android:text="@string/delete_id"
    android:textColor="@color/gray_700"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/tv_withdraw_title" />

  <TextView
    android:id="@+id/tv_withdraw_delete_activity_history"
    style="@style/TextSRegular"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:paddingHorizontal="16dp"
    android:paddingVertical="8dp"
    android:text="@string/delete_activity_history"
    android:textColor="@color/gray_700"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/tv_withdraw_delete_id" />

  <TextView
    android:id="@+id/tv_withdraw_delete_privacy_and_setting"
    style="@style/TextSRegular"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:paddingHorizontal="16dp"
    android:paddingVertical="8dp"
    android:text="@string/delete_privacy_and_setting"
    android:textColor="@color/gray_700"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/tv_withdraw_delete_activity_history" />

  <TextView
    android:id="@+id/tv_withdraw_delete_linked_social_account_info"
    style="@style/TextSRegular"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:paddingHorizontal="16dp"
    android:paddingVertical="8dp"
    android:text="@string/delete_linked_social_account_info"
    android:textColor="@color/gray_700"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/tv_withdraw_delete_privacy_and_setting" />

  <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/cl_withdraw_agree_to_notification"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="24dp"
    android:layout_marginEnd="16dp"
    android:padding="4dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@id/tv_withdraw_delete_linked_social_account_info">

    <CheckBox
      android:id="@+id/cb_withdraw_agree_to_notification"
      android:layout_width="24dp"
      android:layout_height="24dp"
      android:background="@drawable/selector_check_background_24"
      android:button="@android:color/transparent"
      android:clickable="false"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <TextView
      android:id="@+id/tv_withdraw_agree_to_notification"
      style="@style/TextMSemiBold"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:text="@string/agree_to_notification"
      android:textColor="@color/gray_700"
      app:layout_constraintBottom_toBottomOf="@id/cb_withdraw_agree_to_notification"
      app:layout_constraintStart_toEndOf="@+id/cb_withdraw_agree_to_notification"
      app:layout_constraintTop_toTopOf="@id/cb_withdraw_agree_to_notification" />

  </androidx.constraintlayout.widget.ConstraintLayout>

  <View
    android:id="@+id/line_withdraw"
    android:layout_width="0dp"
    android:layout_height="1dp"
    android:layout_marginBottom="16dp"
    android:background="@color/gray_200"
    app:layout_constraintBottom_toTopOf="@id/btn_withdraw"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />

  <Button
    android:id="@+id/btn_withdraw"
    style="@style/Widget.Eggeum.Button"
    android:layout_width="0dp"
    android:layout_marginHorizontal="16dp"
    android:layout_marginBottom="16dp"
    android:text="@string/unsubscribe"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>