<?xml version="1.0" encoding="utf-8"?><!--
  ~ Designed and developed by Wedemy 2023.
  ~
  ~ Licensed under the MIT.
  ~ Please see full license: https://github.com/Wedemy/eggeum-android/blob/main/LICENSE
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <ImageView
    android:id="@+id/iv_cafe_detail_handle"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:src="@drawable/ic_bottom_sheet_handle"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:contentDescription="@string/ic_bottom_sheet_handle" />

  <TextView
    android:id="@+id/tv_cafe_detail_name"
    style="@style/H5"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    android:textColor="@color/gray_900"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/iv_cafe_detail_handle"
    tools:text="스타벅스 강남역신분당역사점" />

  <TextView
    android:id="@+id/tv_cafe_detail_address"
    style="@style/TextMRegular"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/tv_cafe_detail_name"
    tools:text="서울특별시 강남구 강남대로 396" />

  <com.google.android.material.tabs.TabLayout
    android:id="@+id/tl_cafe_detail"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="24dp"
    android:background="@color/white"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/tv_cafe_detail_address"
    app:tabGravity="start"
    app:tabIndicatorColor="@color/teal_500"
    app:tabIndicatorHeight="2dp"
    app:tabRippleColor="@null"
    app:tabSelectedTextColor="@color/gray_900"
    app:tabTextColor="@color/gray_500">

    <com.google.android.material.tabs.TabItem
      style="@style/TextMMedium"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/Info" />

    <com.google.android.material.tabs.TabItem
      style="@style/TextMMedium"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/image" />

    <com.google.android.material.tabs.TabItem
      style="@style/TextMMedium"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/menu" />

  </com.google.android.material.tabs.TabLayout>

  <FrameLayout
    android:id="@+id/child_fragment_container"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/tl_cafe_detail" />

</androidx.constraintlayout.widget.ConstraintLayout>