<?xml version="1.0" encoding="utf-8"?><!--
  ~ Designed and developed by Wedemy 2023.
  ~
  ~ Licensed under the MIT.
  ~ Please see full license: https://github.com/Wedemy/eggeum-android/blob/main/LICENSE
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:ignore="HardcodedText">

  <com.google.android.material.appbar.MaterialToolbar
    android:id="@+id/tb_report"
    android:layout_width="0dp"
    android:layout_height="56dp"
    android:elevation="0dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">

      <ImageView
        android:id="@+id/iv_report_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:contentDescription="X"
        android:src="@drawable/ic_x_filled_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

  </com.google.android.material.appbar.MaterialToolbar>

  <TextView
    android:id="@+id/tv_report_header"
    style="@style/H5"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    android:text="@string/report"
    android:textColor="@color/gray_900"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/tb_report" />

  <TextView
    android:id="@+id/tv_report_title"
    style="@style/TextSMedium"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:layout_marginTop="24dp"
    android:text="@string/report_title"
    android:textColor="@color/gray_800"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/tv_report_header" />

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/til_report_title"
    style="@style/Widget.Eggeum.TextInputLayout.OutlinedBox"
    android:layout_marginHorizontal="16dp"
    android:layout_marginTop="4dp"
    app:boxStrokeColor="@drawable/selector_box_stroke_color_gray_200"
    app:errorTextAppearance="@style/ErrorAppearance"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/tv_report_title">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/tiet_report_title"
      style="@style/Widget.Eggeum.TextInputEditText.OutlinedBox"
      android:ellipsize="end"
      android:hint="@string/input_report_title"
      android:inputType="text"
      android:maxLines="1" />

  </com.google.android.material.textfield.TextInputLayout>

  <TextView
    android:id="@+id/tv_report_content"
    style="@style/TextSMedium"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:layout_marginTop="16dp"
    android:text="@string/report_content"
    android:textColor="@color/gray_800"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/til_report_title" />

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/til_report_content"
    style="@style/Widget.Eggeum.TextInputLayout.OutlinedBox"
    android:layout_height="0dp"
    android:layout_marginHorizontal="16dp"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="58dp"
    app:boxStrokeColor="@drawable/selector_box_stroke_color_gray_200"
    app:errorTextAppearance="@style/ErrorAppearance"
    app:layout_constraintBottom_toTopOf="@id/line_report"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/tv_report_content">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/tiet_report_content"
      style="@style/Widget.Eggeum.TextInputEditText.OutlinedBox"
      android:ellipsize="end"
      android:gravity="top"
      android:hint="@string/input_report_content"
      android:imeOptions="actionDone"
      android:inputType="text" />

  </com.google.android.material.textfield.TextInputLayout>

  <View
    android:id="@+id/line_report"
    android:layout_width="0dp"
    android:layout_height="1dp"
    android:layout_marginBottom="16dp"
    android:background="@color/gray_200"
    app:layout_constraintBottom_toTopOf="@id/btn_send_report"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />

  <Button
    android:id="@+id/btn_send_report"
    style="@style/Widget.Eggeum.Button"
    android:layout_width="0dp"
    android:layout_marginHorizontal="16dp"
    android:layout_marginBottom="16dp"
    android:text="@string/send_report"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>