<?xml version="1.0" encoding="utf-8"?><!--
  ~ Designed and developed by Wedemy 2023.
  ~
  ~ Licensed under the MIT.
  ~ Please see full license: https://github.com/Wedemy/eggeum-android/blob/main/LICENSE
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <com.google.android.material.appbar.MaterialToolbar
    android:id="@+id/tb_edit_my_info"
    style="@style/Widget.Eggeum.Toolbar.WithArrow"
    android:layout_width="0dp"
    android:layout_height="56dp"
    android:elevation="0dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <TextView
      android:id="@+id/tv_edit_my_info_title"
      style="@style/Title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:text="@string/edit_my_info"
      android:textColor="@color/gray_900" />

  </com.google.android.material.appbar.MaterialToolbar>

  <ScrollView
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_marginHorizontal="16dp"
    android:fillViewport="true"
    app:layout_constraintBottom_toBottomOf="@id/line_edit_my_info"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/tb_edit_my_info">

    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

      <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_edit_my_info_profile"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="24dp"
        android:contentDescription="profile image"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_profile_filled_80"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearance="@style/ShapeAppearance.LargeComponent"
        tools:ignore="HardcodedText" />

      <ImageView
        android:id="@+id/iv_edit_profile_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="camera"
        android:src="@drawable/ic_camera_filled_24"
        app:layout_constraintBottom_toBottomOf="@id/iv_edit_my_info_profile"
        app:layout_constraintEnd_toEndOf="@id/iv_edit_my_info_profile"
        tools:ignore="HardcodedText" />

      <TextView
        android:id="@+id/tv_email_title"
        style="@style/TextSMedium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/email"
        android:textColor="@color/gray_800"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_edit_my_info_profile" />

      <TextView
        android:id="@+id/tv_email"
        style="@style/TextLRegular"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_textview"
        android:gravity="center_vertical"
        android:paddingHorizontal="12dp"
        android:text="@string/default_email"
        android:textColor="@color/gray_400"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_email_title"
        tools:text="@string/default_email" />

      <TextView
        android:id="@+id/tv_edit_nickname_title"
        style="@style/TextSMedium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/nickname"
        android:textColor="@color/gray_800"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_email" />

      <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_edit_nickname"
        style="@style/Widget.Eggeum.TextInputLayout.OutlinedBox"
        android:layout_marginTop="8dp"
        app:boxStrokeColor="@drawable/selector_box_stroke_color_gray_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_edit_nickname_title">

        <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/tiet_edit_nickname"
          style="@style/Widget.Eggeum.TextInputEditText.OutlinedBox"
          android:ellipsize="end"
          android:hint="@string/nickname_hint"
          android:imeOptions="actionDone"
          android:inputType="text"
          android:maxLines="1" />

      </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

  </ScrollView>

  <View
    android:id="@+id/line_edit_my_info"
    android:layout_width="0dp"
    android:layout_height="1dp"
    android:layout_marginBottom="16dp"
    android:background="@color/gray_200"
    app:layout_constraintBottom_toTopOf="@id/btn_edit_my_info"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />

  <Button
    android:id="@+id/btn_edit_my_info"
    style="@style/Widget.Eggeum.Button"
    android:layout_width="0dp"
    android:layout_marginHorizontal="16dp"
    android:layout_marginBottom="16dp"
    android:text="@string/edit"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>